// import groovy.io.FileType;

apply plugin: 'maven'
apply plugin: 'java'
apply plugin: 'eclipse'

repositories {
    mavenCentral()
    jcenter()
}

group = 'io.github.lightwayup' // To retain compatibility with Minecraft, use 'net.minecraft'
archivesBaseName = 'launchwrapper'
version = '1.0'
// To retain compatibility with Minecraft, use version number
// higher than 1.12 and change group to 'net.minecraft'
sourceCompatibility = 1.8

dependencies {
    compile 'net.sf.jopt-simple:jopt-simple:5.0.4'
    compile 'org.ow2.asm:asm:6.2.1'
    compile 'org.ow2.asm:asm-commons:6.2.1'
    compile 'org.ow2.asm:asm-util:6.2.1'
    compile 'org.ow2.asm:asm-tree:6.2.1'
    compile 'org.ow2.asm:asm-analysis:6.2.1'
    compile 'org.ow2.asm:asm-xml:6.2.1'
    compile 'org.lwjgl.lwjgl:lwjgl:2.9.3'
    compile 'org.apache.logging.log4j:log4j-core:2.11.1'
    compile 'org.apache.logging.log4j:log4j-api:2.11.1'
}

task sourcesJar(type: Jar) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives jar
    archives sourcesJar
}

// Enable only if you want to deploy artifact
/*
def repoDir = new File(projectDir, "repo")
repoDir.mkdirs()

uploadArchives {
    repositories {
        mavenDeployer {
            repository(url: "file://" + repoDir.absolutePath)

            pom.project {
                description 'Minecraft LegacyLauncher'
                url 'https://github.com/Mojang/LegacyLauncher'
            }
        }
    }

    doLast {
        // Purge all annoying files that aren't needed
        repoDir.traverse(type: FileType.FILES, nameFilter: ~/.*\.(xml(?:\.sha1)?|md5)$/) {
            it.delete()
        }
    }
}

clean << {
    repoDir.deleteDir()
}
*/
